# rmclass

class01/: .gitignore
class01/src/: task1.cpp
class02/src/: Task2.cpp
class02/tools/: CMakeLists.txt
class03/src/: task3.cpp
class03/tools/: CMakeLists.txt
class14/: CMakeLists.txt  usb.cpp
class15/class15/: CMakeLists.txt  main.cpp
